Update the size of the hud details

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -299,3 +299,12 @@ $slide-duration: 3.5s;
     animation-delay: 5s;
   }
 }
+
+.hudDetail {
+  font-size: 0.65em;
+
+  span {
+    font-weight: bold;
+    font-size: 1.5em;
+  }
+}
