--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -248,6 +248,7 @@ $slide-duration: 3.5s;
     padding: 0 20px;
     right: 0;
     top: 50%;
+    font-size: 5vw;
     cursor: pointer;
   }
 
@@ -256,6 +257,7 @@ $slide-duration: 3.5s;
     left: 0;
     top: 50%;
     padding: 0 20px;
+    font-size: 5vw;
     cursor: pointer;
   }
 
